# sonar_rs

./: Cargo.toml  README.md
sonar_client/: Cargo.toml
sonar_client/src/: main.rs  state_machine.rs
sonar_common/: Cargo.toml
sonar_common/src/: lib.rs
sonar_rpi/: Cargo.toml
sonar_rpi/.cargo/: config.toml
sonar_rpi/src/: main.rs
