[package]
name = "sonar_client"
version = "0.1.0"
authors = ["paunstefan <paunstefan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonar_common = { path = "../sonar_common" }
bincode = "1.3.3"
fltk = { version = "^1", features = ["fltk-bundled"] }