[package]
name = "sonar_common"
version = "0.1.0"
authors = ["paunstefan <paunstefan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
bincode = "1.3.3"