[package]
name = "sonar_rpi"
version = "0.1.0"
authors = ["paunstefan <paunstefan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
sonar_common = { path = "../sonar_common" }
sg90_pi = { git = "https://github.com/paunstefan/sg90_pi", branch = "main" }
bincode = "1.3.3"